# phoneme-reverser

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: audio.rs  converter.rs  error.rs  lib.rs  main.rs  phoneme.rs  playback.rs  synth.rs
src/tui/: app.rs  event.rs  mod.rs  phoneme_db.rs  ui.rs
