[package]
name = "phoneme-reverser"
version = "0.1.0"
edition = "2021"

[lib]
name = "phoneme_reverser"
path = "src/lib.rs"

[[bin]]
name = "phoneme-reverser"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }
cpal = "0.15"
hound = "3.5"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
